changed font, fixes in scrollbar & other fixes

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
     margin: 0;
@@ -37,16 +38,16 @@ hr {
 
 ::-webkit-scrollbar-track {
     border-radius: 5px;
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.30);
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.20);
+    background-color: rgba(255, 255, 255, 0.15);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(0, 0, 0, 0.30);
+    background-color: rgba(255, 255, 255, 0.25);
 }
 
 /* Styling Navigatin Bar */
@@ -71,7 +72,7 @@ hr {
     max-width: 1250px;
     margin: auto;
     padding: 0px 30px;
-    font: 16px cursive;
+	font-family: "Lucida Console", "Courier New", monospace;
     color: #fff;
 }
 
@@ -87,9 +88,9 @@ hr {
     list-style: none;
 }
 
-.menu-list li a{
+.menu-list li a {
     color: #fff;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 500;
     margin-left: 25px;
     text-decoration: none;
@@ -608,6 +609,7 @@ hr {
 
 /* Styling Contact */
 .contact {
+    height: auto;
     padding: 30px 0;
 	background: #00234b;
 }
@@ -743,7 +745,9 @@ hr {
         margin: 0 8%;
         margin-top: 2%;
         padding: 0px 10px;
-        font: 15px cursive;
+        font-size: 15px;
+        font-family: 'Poppins', sans-serif;
+        word-spacing: 2px;
         color: #fff;
     }
 
@@ -755,7 +759,16 @@ hr {
         margin: 6px 6%;
     }
 
+    /* Styling Skills */
+    .skills-content {
+        font-family: 'Poppins', sans-serif;
+    }
+
     /* Styling Experience */
+    .experience-content {
+        font-family: 'Poppins', sans-serif;
+    }
+
     .card-container {
         grid-template-columns: repeat(1, min-content);
         grid-template-rows: repeat(2, 1fr);
@@ -765,12 +778,21 @@ hr {
         margin: 3rem 0;
     }
 
+    .card-container .card .face.face2 .card-content p {
+        line-height: 1.2;
+    }
+
+    /* Styling Projets */
+    .projects-content {
+        font-family: 'Poppins', sans-serif;
+    }
+
     /* Styling Contact */
     .contact-content p {
         display: flex;
         margin: 6px 5%;
         text-align: center;
-        font: 10px cursive;
+        font-family: 'Poppins', sans-serif;
         font-size: 100%;
         color: #fff;
     }
@@ -861,7 +883,7 @@ hr {
     }
     
     .box {
-        margin-bottom: 3rem;
+        margin-bottom: 5rem;
     }
 
     .box h1 {
